Fixed referral link not wrapping on firefox
Added inability for user to highlight / select referral link themselves

--- a/src/src/routes/Account/Referral/Referral.css
+++ b/src/src/routes/Account/Referral/Referral.css
@@ -1,5 +1,5 @@
 @value Basa, BlueBase, Mackerel, White, RafBgDefault from 'styles/colors.css';
-@value ScreenSMMin, MinBreakPointSM, ScreenMLMax, ScreenMLMin from 'styles/screenSizes.css';
+@value ScreenSMMin, ScreenXXSMax, MinBreakPointSM, ScreenMLMax, ScreenMLMin from 'styles/screenSizes.css';
 @value SpacingXXS from 'sass-loader!styles/spacing.scss';
 /* 5px, 20px */
 
@@ -164,6 +164,13 @@
 	overflow: hidden;
 	border: 1px #979797 dashed;
 	border-radius: 3px;
+	user-select: none;
+	-webkit-user-select: none;
+	@media ScreenXXSMax {
+		overflow-wrap: break-word;
+		max-width: 85%;
+		margin: 0 auto;
+	}
 }
 
 .displayedLink {
